# Odroid_Adafruit_BNO055

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md
cmake/: OdroidAdafruitBNO055Config.cmake.in  OdroidAdafruitBNO055ConfigVersion.cmake.in  Setup.cmake  config.h.in
examples/: CMakeLists.txt
examples/bunny/: bunny.cpp
examples/position/: position.cpp
examples/rawdata/: rawdata.cpp
examples/read_all_data/: read_all_data.cpp
examples/restore_offsets/: restore_offsets.cpp
examples/sensorapi/: CMakeLists.txt  sensorapi.cpp
include/: Adafruit_BNO055.h
include/utility/: matrix.h
src/: Adafruit_BNO055.cpp  CMakeLists.txt
